welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:6: error: not found: value levebrosse
	levebrosse
        ^