welcome.lessons.welcome.methods.picture.PictureMono.scala.code
override def run() {
def quadrille() {
	avance
	baisseBrosse
	levebrosse
} // colorie la case devant et releve la brosse
def faireV() {
	for (nb <- 1 to 2) {
		quadrille
		gauche
		quadrille
		droite
	}
	droite
	for (nb <- 1 to 2) {
		quadrille
		gauche
		quadrille
		droite
		retourne
    }// fais un V blanc quadrillé
}
for (nb <- 1 to 4) {
	faireV
}
}
